feat(actions): Add actions to publish docs
Signed-off-by: Jean-Luc Davern <jdavern@linuxfoundation.org>

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -7,48 +7,19 @@ on:
       - main
 
 jobs:
-  build-devcontainer:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout (GitHub)
-        uses: actions/checkout@v4
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push devcontainer image
-        uses: devcontainers/ci@v0.3
-        with:
-          imageName: ghcr.io/lf-certification/cert-tech-docs-devcontainer
-          cacheFrom: ghcr.io/lf-certification/cert-tech-docs-devcontainer
-          push: always
-
   publish-gh-pages:
-    needs: [build-devcontainer]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout (GitHub)
         uses: actions/checkout@v4
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install devbox
+        uses: jetpack-io/devbox-install-action@v0.8.0
 
-      - name: Run devcontainer task
-        uses: devcontainers/ci@v0.3
-        with:
-          imageName: ghcr.io/lf-certification/cert-tech-docs-devcontainer
-          cacheFrom: ghcr.io/lf-certification/cert-tech-docs-devcontainer
-          push: never
-          runCmd: |
-            set -e
+      - name: Setup Python environment
+        run: |
+          devbox run -- poetry install
 
-            poetry run mkdocs gh-deploy --force --no-history \
-                --remote-branch gh-pages
+      - name: Build and deploy docs
+        run: |
+          devbox run -- poetry run mkdocs gh-deploy --force --no-history --remote-branch gh-pages
